--- a/arrays_strings/str_diff/str_diff_challenge.ipynb
+++ b/arrays_strings/str_diff/str_diff_challenge.ipynb
@@ -2,21 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This notebook was prepared by [Donne Martin](https://github.com/donnemartin). Source and license info is on [GitHub](https://github.com/donnemartin/interactive-coding-challenges)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Challenge Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Problem: Find the single different char between two strings.\n",
     "\n",
@@ -30,7 +39,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Constraints\n",
     "\n",
@@ -47,7 +59,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Test Cases\n",
     "\n",
@@ -58,7 +73,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Algorithm\n",
     "\n",
@@ -67,47 +85,93 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "class Solution(object):\n",
     "\n",
     "    def find_diff(self, s, t):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        if s is None or t is None:\n",
+    "            raise TypeError('s or t cannot be None')\n",
+    "        seen = {}\n",
+    "        for char in s:\n",
+    "            if char in seen:\n",
+    "                seen[char] += 1\n",
+    "            else:\n",
+    "                seen[char] = 1\n",
+    "        for char in t:\n",
+    "            try:\n",
+    "                seen[char] -= 1\n",
+    "            except KeyError:\n",
+    "                return char\n",
+    "            if seen[char] < 0:\n",
+    "                return char\n",
+    "        return None\n",
+    "    \n",
+    "    def find_diff_xor(self, s, t):\n",
+    "        if s is None or t is None:\n",
+    "            raise TypeError('s or t cannot be None')\n",
+    "        result = 0\n",
+    "        for char in s:\n",
+    "            result ^= ord(char)\n",
+    "        for char in t:\n",
+    "            result ^= ord(char)\n",
+    "        return chr(result)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Unit Test"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**The following unit test is expected to fail until you solve the challenge.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: test_find_diff\n",
+      "Success: test_find_diff_xor\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_str_diff.py\n",
     "from nose.tools import assert_equal, assert_raises\n",
@@ -121,6 +185,10 @@
     "        assert_equal(solution.find_diff('abcd', 'abcde'), 'e')\n",
     "        assert_equal(solution.find_diff('aaabbcdd', 'abdbacade'), 'e')\n",
     "        print('Success: test_find_diff')\n",
+    "        assert_raises(TypeError, solution.find_diff_xor, None)\n",
+    "        assert_equal(solution.find_diff_xor('abcd', 'abcde'), 'e')\n",
+    "        assert_equal(solution.find_diff_xor('aaabbcdd', 'abdbacade'), 'e')\n",
+    "        print('Success: test_find_diff_xor')\n",
     "\n",
     "\n",
     "def main():\n",
@@ -134,7 +202,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Solution Notebook\n",
     "\n",
@@ -144,21 +215,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
