--- a/arrays_strings/two_sum/two_sum_challenge.ipynb
+++ b/arrays_strings/two_sum/two_sum_challenge.ipynb
@@ -2,21 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This notebook was prepared by [Donne Martin](https://github.com/donnemartin). Source and license info is on [GitHub](https://github.com/donnemartin/interactive-coding-challenges)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Challenge Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Problem: Given an array, find the two indices that sum to a specific value.\n",
     "\n",
@@ -30,7 +39,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Constraints\n",
     "\n",
@@ -52,7 +64,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Test Cases\n",
     "\n",
@@ -63,7 +78,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Algorithm\n",
     "\n",
@@ -72,47 +90,86 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "class Solution(object):\n",
     "\n",
-    "    def two_sum(self, nums, val):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "    def two_sum(self, nums, target):\n",
+    "        if nums is None or target is None:\n",
+    "            raise TypeError('nums or target cannot be None')\n",
+    "        if not nums:\n",
+    "            raise ValueError('nums cannot be empty')\n",
+    "        cache = {}\n",
+    "        for index, num in enumerate(nums):\n",
+    "            print('current cache', cache)\n",
+    "            cache_target = target - num\n",
+    "            if num in cache:\n",
+    "                print('current num', num)\n",
+    "                return [cache[num], index]\n",
+    "            else:\n",
+    "                cache[cache_target] = index\n",
+    "        return None"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Unit Test"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**The following unit test is expected to fail until you solve the challenge.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('current cache', {})\n",
+      "('current cache', {6: 0})\n",
+      "('current cache', {4: 1, 6: 0})\n",
+      "('current cache', {4: 1, 5: 2, 6: 0})\n",
+      "('current cache', {14: 3, 4: 1, 5: 2, 6: 0})\n",
+      "('current num', 5)\n",
+      "Success: test_two_sum\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_two_sum.py\n",
     "from nose.tools import assert_equal, assert_raises\n",
@@ -142,7 +199,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Solution Notebook\n",
     "\n",
@@ -152,21 +212,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
