--- a/arrays_strings/priority_queue/priority_queue_challenge.ipynb
+++ b/arrays_strings/priority_queue/priority_queue_challenge.ipynb
@@ -89,7 +89,32 @@
    "source": [
     "## Algorithm\n",
     "\n",
-    "Refer to the [Solution Notebook](https://github.com/donnemartin/interactive-coding-challenges/arrays_strings/priority_queue/priority_queue_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start."
+    "Refer to the [Solution Notebook](https://github.com/donnemartin/interactive-coding-challenges/arrays_strings/priority_queue/priority_queue_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start.\n",
+    "### insert\n",
+    "* Append to the internal array.\n",
+    "\n",
+    "Complexity:\n",
+    "* Time: O(1)\n",
+    "* Space: O(1)\n",
+    "\n",
+    "### extract_min\n",
+    "\n",
+    "* Loop through each item in the internal array\n",
+    "    * Update the min value as needed\n",
+    "* Remove the min element from the array and return it\n",
+    "\n",
+    "Complexity:\n",
+    "* Time: O(n)\n",
+    "* Space: O(1)\n",
+    "\n",
+    "### decrease_key\n",
+    "\n",
+    "* Loop through each item in the internal array to find the matching input\n",
+    "    * Update the matching element's key\n",
+    "    \n",
+    "Complexity:\n",
+    "* Time: O(n)\n",
+    "* Space: O(1)"
    ]
   },
   {
@@ -104,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -112,6 +137,8 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "\n",
     "class PriorityQueueNode(object):\n",
     "\n",
     "    def __init__(self, obj, key):\n",
@@ -131,16 +158,25 @@
     "        return len(self.array)\n",
     "\n",
     "    def insert(self, node):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
+    "        self.array.append(node)\n",
+    "        return self.array[-1]\n",
     "\n",
     "    def extract_min(self):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
+    "        if not self.array:\n",
+    "            return None\n",
+    "        minimum = sys.maxsize\n",
+    "        for index, node in enumerate(self.array):\n",
+    "            if node.key < minimum:\n",
+    "                minimum = node.key\n",
+    "                minimum_index = index\n",
+    "        return self.array.pop(minimum_index)\n",
     "\n",
     "    def decrease_key(self, obj, new_key):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        for node in self.array:\n",
+    "            if node.obj is obj:\n",
+    "                node.key = new_key\n",
+    "                return node\n",
+    "        return None"
    ]
   },
   {
@@ -165,20 +201,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: test_min_heap\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_priority_queue.py\n",
     "from nose.tools import assert_equal\n",
     "\n",
     "\n",
     "class TestPriorityQueue(object):\n",
-    "\n",
+    "    \n",
     "    def test_priority_queue(self):\n",
     "        priority_queue = PriorityQueue()\n",
     "        assert_equal(priority_queue.extract_min(), None)\n",
@@ -196,11 +240,9 @@
     "        assert_equal(mins, [2, 5, 15, 19, 22, 40])\n",
     "        print('Success: test_min_heap')\n",
     "\n",
-    "\n",
     "def main():\n",
     "    test = TestPriorityQueue()\n",
     "    test.test_priority_queue()\n",
-    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
