--- a/arrays_strings/reverse_string/reverse_string_challenge.ipynb
+++ b/arrays_strings/reverse_string/reverse_string_challenge.ipynb
@@ -78,7 +78,15 @@
    "source": [
     "## Algorithm\n",
     "\n",
-    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/arrays_strings/reverse_string/reverse_string_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start."
+    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/arrays_strings/reverse_string/reverse_string_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start.\n",
+    "\n",
+    "* Iterate len(string)/2 times, starting with i = 0:\n",
+    "    * swap i and len(string) - 1 - i\n",
+    "    * Increment i\n",
+    "    \n",
+    "Complexity:\n",
+    "* Time: O(n)\n",
+    "* Space: O(1)"
    ]
   },
   {
@@ -93,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -101,11 +109,19 @@
    },
    "outputs": [],
    "source": [
+    "from __future__ import division\n",
+    "\n",
     "class ReverseString(object):\n",
     "\n",
     "    def reverse(self, chars):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        if chars is None or not chars:\n",
+    "            return chars\n",
+    "        size = len(chars)\n",
+    "        \n",
+    "        for i in range(size // 2):\n",
+    "            chars[i], chars[size - 1 - i] = \\\n",
+    "                chars[size - 1 - i], chars[i]\n",
+    "        return chars"
    ]
   },
   {
@@ -132,20 +148,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: test_reverse\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_reverse_string.py\n",
     "from nose.tools import assert_equal\n",
     "\n",
     "\n",
     "class TestReverse(object):\n",
-    "\n",
+    "    \n",
     "    def test_reverse(self, func):\n",
     "        assert_equal(func(None), None)\n",
     "        assert_equal(func(['']), [''])\n",
@@ -154,19 +178,11 @@
     "            ['r', 'a', 'b', ' ', 'o', 'o', 'f'])\n",
     "        print('Success: test_reverse')\n",
     "\n",
-    "    def test_reverse_inplace(self, func):\n",
-    "        target_list = ['f', 'o', 'o', ' ', 'b', 'a', 'r']\n",
-    "        func(target_list)\n",
-    "        assert_equal(target_list, ['r', 'a', 'b', ' ', 'o', 'o', 'f'])\n",
-    "        print('Success: test_reverse_inplace')\n",
-    "\n",
     "\n",
     "def main():\n",
     "    test = TestReverse()\n",
     "    reverse_string = ReverseString()\n",
     "    test.test_reverse(reverse_string.reverse)\n",
-    "    test.test_reverse_inplace(reverse_string.reverse)\n",
-    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
