--- a/graphs_trees/bst/bst_challenge.ipynb
+++ b/graphs_trees/bst/bst_challenge.ipynb
@@ -89,7 +89,23 @@
    "source": [
     "## Algorithm\n",
     "\n",
-    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/graphs_trees/bst/bst_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start."
+    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/graphs_trees/bst/bst_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start.\n",
+    "\n",
+    "### Insert\n",
+    "\n",
+    "* If the root is None, return Node(data)\n",
+    "* If the data is <= the current node's data\n",
+    "    * If the current node's left child is None, set it to Node(data)\n",
+    "    * Else, recursively call insert on the left child\n",
+    "* Else\n",
+    "    * If the current node's right child is None, set it to Node(data)\n",
+    "    * Else, recursively call insert on the right child\n",
+    "    \n",
+    "Complexity:\n",
+    "* Time: O(h), where h is the height of the tree\n",
+    "    * In a balanced tree, the height is O(log(n))\n",
+    "    * In the worse case we have a linked list structure with O(n)\n",
+    "* Space: O(m), where m is the recursion depth, or O(1) if using an iterative approach"
    ]
   },
   {
@@ -104,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -115,15 +131,46 @@
     "class Node(object):\n",
     "\n",
     "    def __init__(self, data):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
-    "\n",
+    "        self.data = data\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "        self.parent = None\n",
+    "        \n",
+    "    def __repr(self):\n",
+    "        return str(self.data)\n",
     "\n",
     "class Bst(object):\n",
-    "\n",
+    "    \n",
+    "    def __init__(self, root=None):\n",
+    "        self.root = root\n",
+    "        \n",
     "    def insert(self, data):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        if data is None:\n",
+    "            raise TypeError('data cannot be None')\n",
+    "        if self.root is None:\n",
+    "            self.root = Node(data)\n",
+    "            return self.root\n",
+    "        else:\n",
+    "            return self._insert(self.root, data)\n",
+    "        \n",
+    "    def _insert(self, node, data):\n",
+    "        if node is None:\n",
+    "            return Node(data)\n",
+    "        if data <= node.data:\n",
+    "            if node.left is None:\n",
+    "                node.left = self._insert(node.left, data)\n",
+    "                node.left.parent = node\n",
+    "                return node.left\n",
+    "            else:\n",
+    "                return self._insert(node.left, data)\n",
+    "        else:\n",
+    "            if node.right is None:\n",
+    "                node.right = self._insert(node.right, data)\n",
+    "                node.right.parent = node\n",
+    "                return node.right\n",
+    "            else:\n",
+    "                return self._insert(node.right, data)\n",
+    "    "
    ]
   },
   {
@@ -148,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -161,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -174,13 +221,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: test_tree\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_bst.py\n",
     "from nose.tools import assert_equal\n",
@@ -201,7 +256,7 @@
     "        in_order_traversal(bst.root, self.results.add_result)\n",
     "        assert_equal(str(self.results), '[1, 2, 3, 5, 8]')\n",
     "        self.results.clear_results()\n",
-    "\n",
+    "        \n",
     "    def test_tree_two(self):\n",
     "        bst = Bst()\n",
     "        bst.insert(1)\n",
@@ -211,15 +266,13 @@
     "        bst.insert(5)\n",
     "        in_order_traversal(bst.root, self.results.add_result)\n",
     "        assert_equal(str(self.results), '[1, 2, 3, 4, 5]')\n",
-    "\n",
+    "        \n",
     "        print('Success: test_tree')\n",
-    "\n",
     "\n",
     "def main():\n",
     "    test = TestTree()\n",
     "    test.test_tree_one()\n",
     "    test.test_tree_two()\n",
-    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
