--- a/stacks_queues/stack/stack_challenge.ipynb
+++ b/stacks_queues/stack/stack_challenge.ipynb
@@ -2,21 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This notebook was prepared by [Donne Martin](http://donnemartin.com). Source and license info is on [GitHub](https://github.com/donnemartin/interactive-coding-challenges)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Challenge Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Problem: Implement a stack with push, pop, peek, and is_empty methods using a linked list.\n",
     "\n",
@@ -31,7 +40,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Constraints\n",
     "\n",
@@ -43,7 +55,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Test Cases\n",
     "\n",
@@ -71,16 +86,60 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Algorithm\n",
     "\n",
-    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/stacks_queues/stack/stack_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start."
+    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/stacks_queues/stack/stack_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start.\n",
+    "\n",
+    "### Push\n",
+    "* Create new node with value\n",
+    "* Set node's next to top\n",
+    "* Set top to node\n",
+    "\n",
+    "Complexity:\n",
+    "* Time: O(1)\n",
+    "* Space: O(1)\n",
+    "\n",
+    "### Pop\n",
+    "\n",
+    "* If stack is empty, return None\n",
+    "* Else\n",
+    "    * Save top's value\n",
+    "    * Set top to top.next\n",
+    "    * Return saved value\n",
+    "    \n",
+    "Complexity:\n",
+    "* Time: O(1)\n",
+    "* Space: O(1)\n",
+    "\n",
+    "### Peek\n",
+    "\n",
+    "* If stack is empty, return None\n",
+    "* Else return top's value\n",
+    "\n",
+    "Complexity:\n",
+    "* Time: O(1)\n",
+    "* Space: O(1)\n",
+    "\n",
+    "### Is Empty\n",
+    "* If peek has a value, return False\n",
+    "* Else return True\n",
+    "\n",
+    "Complexity\n",
+    "* Time: O(1)\n",
+    "* Space: O(1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Code"
    ]
@@ -89,43 +148,46 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "class Node(object):\n",
     "\n",
-    "    def __init__(self, data):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
-    "\n",
+    "    def __init__(self, data, next=None):\n",
+    "        self.data = data\n",
+    "        self.next = next\n",
     "\n",
     "class Stack(object):\n",
     "\n",
     "    def __init__(self, top=None):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
+    "        self.top = top\n",
     "\n",
     "    def push(self, data):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
+    "        self.top = Node(data, self.top)\n",
     "\n",
     "    def pop(self):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
+    "        if self.top is None:\n",
+    "            return None\n",
+    "        data = self.top.data\n",
+    "        self.top = self.top.next\n",
+    "        return data\n",
     "\n",
     "    def peek(self):\n",
-    "        # TODO: Implement me\n",
-    "        pass\n",
+    "        return self.top.data if self.top is not None else None\n",
     "\n",
     "    def is_empty(self):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        return self.peek() is None"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Unit Test\n",
     "\n",
@@ -138,7 +200,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -155,13 +219,13 @@
     "        stack = Stack()\n",
     "        assert_equal(stack.peek(), None)\n",
     "        assert_equal(stack.pop(), None)\n",
-    "\n",
+    "        \n",
     "        print('Test: One element')\n",
     "        top = Node(5)\n",
     "        stack = Stack(top)\n",
     "        assert_equal(stack.pop(), 5)\n",
     "        assert_equal(stack.peek(), None)\n",
-    "\n",
+    "        \n",
     "        print('Test: More than one element')\n",
     "        stack = Stack()\n",
     "        stack.push(1)\n",
@@ -175,14 +239,12 @@
     "        assert_equal(stack.pop(), 1)\n",
     "        assert_equal(stack.peek(), None)\n",
     "        assert_equal(stack.is_empty(), True)\n",
-    "\n",
+    "        \n",
     "        print('Success: test_end_to_end')\n",
-    "\n",
     "\n",
     "def main():\n",
     "    test = TestStack()\n",
     "    test.test_end_to_end()\n",
-    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
@@ -190,7 +252,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Solution Notebook\n",
     "\n",
@@ -200,21 +265,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
