--- a/graphs_trees/tree_bfs/bfs_challenge.ipynb
+++ b/graphs_trees/tree_bfs/bfs_challenge.ipynb
@@ -2,21 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This notebook was prepared by [Donne Martin](https://github.com/donnemartin). Source and license info is on [GitHub](https://github.com/donnemartin/interactive-coding-challenges)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Challenge Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Problem: Implement breadth-first traversal on a binary tree.\n",
     "\n",
@@ -29,7 +38,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Constraints\n",
     "\n",
@@ -43,7 +55,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Test Cases\n",
     "\n",
@@ -53,7 +68,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Algorithm\n",
     "\n",
@@ -62,7 +80,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Code"
    ]
@@ -71,19 +92,65 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "%run ../bst/bst.py\n",
-    "%load ../bst/bst.py"
+    "# %load ../bst/bst.py\n",
+    "class Node(object):\n",
+    "\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "        self.parent = None\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return str(self.data)\n",
+    "\n",
+    "\n",
+    "class Bst(object):\n",
+    "\n",
+    "    def __init__(self, root=None):\n",
+    "        self.root = root\n",
+    "\n",
+    "    def insert(self, data):\n",
+    "        if data is None:\n",
+    "            raise TypeError('data cannot be None')\n",
+    "        if self.root is None:\n",
+    "            self.root = Node(data)\n",
+    "            return self.root\n",
+    "        else:\n",
+    "            return self._insert(self.root, data)\n",
+    "\n",
+    "    def _insert(self, node, data):\n",
+    "        if node is None:\n",
+    "            return Node(data)\n",
+    "        if data <= node.data:\n",
+    "            if node.left is None:\n",
+    "                node.left = self._insert(node.left, data)\n",
+    "                node.left.parent = node\n",
+    "                return node.left\n",
+    "            else:\n",
+    "                return self._insert(node.left, data)\n",
+    "        else:\n",
+    "            if node.right is None:\n",
+    "                node.right = self._insert(node.right, data)\n",
+    "                node.right.parent = node\n",
+    "                return node.right\n",
+    "            else:\n",
+    "                return self._insert(node.right, data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -96,7 +163,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Unit Test"
    ]
@@ -105,7 +175,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -116,7 +188,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -152,7 +226,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Solution Notebook\n",
     "\n",
@@ -162,21 +239,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
