--- a/linked_lists/linked_list/linked_list_challenge.ipynb
+++ b/linked_lists/linked_list/linked_list_challenge.ipynb
@@ -2,21 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This notebook was prepared by [Donne Martin](http://donnemartin.com). Source and license info is on [GitHub](https://github.com/donnemartin/interactive-coding-challenges)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Challenge Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Problem: Implement a linked list with insert, append, find, delete, length, and print methods.\n",
     "\n",
@@ -30,7 +39,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Constraints\n",
     "\n",
@@ -44,7 +56,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Test Cases\n",
     "\n",
@@ -86,84 +101,202 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Algorithm\n",
     "\n",
-    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/linked_lists/linked_list/linked_list_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start."
+    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/linked_lists/linked_list/linked_list_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start.\n",
+    "\n",
+    "### Insert to Front\n",
+    "\n",
+    "* If the data we are inserting is None, return\n",
+    "* Create a node with the input data, set node.next to head\n",
+    "* Assign the head to the node\n",
+    "\n",
+    "Complexity\n",
+    "* Time: O(1)\n",
+    "* Space: O(1)\n",
+    "\n",
+    "### Append\n",
+    "\n",
+    "* If the data we are inserting is None, return\n",
+    "* Create a node with the input data\n",
+    "* If this is an empty list\n",
+    "    * Assign the head to the node\n",
+    "* Else\n",
+    "    * Iterate to the end of the list\n",
+    "    * Set the final node's next to the new node\n",
+    "    \n",
+    "Complexity:\n",
+    "\n",
+    "* Time: O(n)\n",
+    "* Space: O(1)\n",
+    "\n",
+    "### Find\n",
+    "\n",
+    "* If the data we are finding is None, return\n",
+    "* If the list is empty, return\n",
+    "* For each node\n",
+    "    * If the value is a match, return it\n",
+    "    * Else, move on to the next node\n",
+    "    \n",
+    "Complexity\n",
+    "\n",
+    "* Time: O(n)\n",
+    "* Space: O(1)\n",
+    "\n",
+    "### Delete\n",
+    "\n",
+    "* If data we are deleting is None, return\n",
+    "* If the list is empty, return\n",
+    "* For each node, keep track of previous and current node\n",
+    "    * If the value we are deleting is a match in the current node\n",
+    "        * Update the previous node's next pointer to the current node's next pointer\n",
+    "        * We do not have to explicitly delete in Python\n",
+    "    * Else, move onto the next node\n",
+    "* As an alternative, we could avoid the use of two pointers by evaluating the current node's next value:\n",
+    "    * If the next value is a match, set the current node's next to next.next\n",
+    "    * Special care should be taken if deleting the head node\n",
+    "    \n",
+    "Complexity\n",
+    "\n",
+    "* Time: O(n)\n",
+    "* Space: O(1)\n",
+    "\n",
+    "### Length\n",
+    "\n",
+    "* For each node\n",
+    "    * Increase length counter\n",
+    "    \n",
+    "Complexity\n",
+    "* Time: O(n)\n",
+    "* Space: O(1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "class Node(object):\n",
     "\n",
     "    def __init__(self, data, next_node=None):\n",
-    "        pass\n",
-    "        # TODO: Implement me\n",
+    "        self.data = data\n",
+    "        self.next = next_node\n",
     "\n",
     "    def __str__(self):\n",
-    "        pass\n",
-    "        # TODO: Implement me\n",
+    "        return self.data\n",
     "\n",
     "\n",
     "class LinkedList(object):\n",
     "\n",
     "    def __init__(self, head=None):\n",
-    "        pass\n",
-    "        # TODO: Implement me\n",
+    "        self.head = head\n",
     "\n",
     "    def __len__(self):\n",
-    "        pass\n",
-    "        # TODO: Implement me\n",
+    "        curr = self.head\n",
+    "        counter = 0\n",
+    "        while curr is not None:\n",
+    "            counter += 1\n",
+    "            curr = curr.next\n",
+    "        return counter\n",
     "\n",
     "    def insert_to_front(self, data):\n",
-    "        pass\n",
-    "        # TODO: Implement me\n",
+    "        if data is None:\n",
+    "            return None\n",
+    "        node = Node(data, self.head)\n",
+    "        self.head = node\n",
+    "        return node\n",
     "\n",
     "    def append(self, data):\n",
-    "        pass\n",
-    "        # TODO: Implement me\n",
+    "        if data is None:\n",
+    "            return None\n",
+    "        node = Node(data)\n",
+    "        if self.head is None:\n",
+    "            self.head = Node(data)\n",
+    "            return node\n",
+    "        curr_node = self.head\n",
+    "        while curr_node.next is not None:\n",
+    "            curr_node = curr_node.next\n",
+    "        curr_node.next = node\n",
+    "        return node\n",
     "\n",
     "    def find(self, data):\n",
-    "        pass\n",
-    "        # TODO: Implement me\n",
+    "        if data is None:\n",
+    "            return None\n",
+    "        curr_node = self.head\n",
+    "        while curr_node is not None:\n",
+    "            if curr_node.data == data:\n",
+    "                return curr_node\n",
+    "            curr_node = curr_node.next\n",
+    "        return None\n",
     "\n",
     "    def delete(self, data):\n",
-    "        pass\n",
-    "        # TODO: Implement me\n",
+    "        if data is None:\n",
+    "            return None\n",
+    "        if self.head is None:\n",
+    "            return\n",
+    "        if self.head.data == data:\n",
+    "            self.head = None\n",
+    "            return\n",
+    "        prev_node = self.head\n",
+    "        curr_node = self.head.next\n",
+    "        while curr_node is not None:\n",
+    "            if curr_node.data == data:\n",
+    "                prev_node.next = curr_node.next\n",
+    "                return\n",
+    "            prev_node = curr_node\n",
+    "            curr_node = curr_node.next\n",
     "\n",
     "    def print_list(self):\n",
-    "        pass\n",
-    "        # TODO: Implement me\n",
+    "        curr_node = self.head\n",
+    "        while curr_node is not None:\n",
+    "            print(curr_node.data)\n",
+    "            curr_node = curr_node.next\n",
     "\n",
     "    def get_all_data(self):\n",
-    "        pass\n",
-    "        # TODO: Implement me"
+    "        data = []\n",
+    "        curr_node = self.head\n",
+    "        while curr_node is not None:\n",
+    "            data.append(curr_node.data)\n",
+    "            curr_node = curr_node.next\n",
+    "        return data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Unit Test"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "\n",
     "\n",
@@ -172,64 +305,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test: insert_to_front on an empty list\n",
+      "Test: insert_to_front on a None\n",
+      "Test: insert_to_front general case\n",
+      "Success: test_insert_to_front\n",
+      "\n",
+      "Test: append on an empty list\n",
+      "Test: append on a None\n",
+      "Test: append general case\n",
+      "Success: test append\n",
+      "\n",
+      "Test: find on an empty list\n",
+      "Test: find on a None\n",
+      "Test: find general case with matches\n",
+      "Test: find general case with no matches\n",
+      "Success: test_find\n",
+      "\n",
+      "Test: delete on an empty list\n",
+      "Test: delete on None\n",
+      "Test: delete general case with matches\n",
+      "Test: delete general case with no matches\n",
+      "Success: test delete\n",
+      "\n",
+      "Test: len on an empty list\n",
+      "Test: len general case\n",
+      "Success: test len\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_linked_list.py\n",
     "from nose.tools import assert_equal\n",
     "\n",
     "\n",
     "class TestLinkedList(object):\n",
-    "\n",
+    "    \n",
     "    def test_insert_to_front(self):\n",
     "        print('Test: insert_to_front on an empty list')\n",
     "        linked_list = LinkedList(None)\n",
     "        linked_list.insert_to_front(10)\n",
     "        assert_equal(linked_list.get_all_data(), [10])\n",
-    "\n",
+    "        \n",
     "        print('Test: insert_to_front on a None')\n",
     "        linked_list.insert_to_front(None)\n",
     "        assert_equal(linked_list.get_all_data(), [10])\n",
-    "\n",
+    "        \n",
     "        print('Test: insert_to_front general case')\n",
     "        linked_list.insert_to_front('a')\n",
     "        linked_list.insert_to_front('bc')\n",
     "        assert_equal(linked_list.get_all_data(), ['bc', 'a', 10])\n",
-    "\n",
+    "        \n",
     "        print('Success: test_insert_to_front\\n')\n",
-    "\n",
+    "        \n",
     "    def test_append(self):\n",
     "        print('Test: append on an empty list')\n",
     "        linked_list = LinkedList(None)\n",
     "        linked_list.append(10)\n",
     "        assert_equal(linked_list.get_all_data(), [10])\n",
-    "\n",
-    "        print('Test: append a None')\n",
+    "        \n",
+    "        print('Test: append on a None')\n",
     "        linked_list.append(None)\n",
     "        assert_equal(linked_list.get_all_data(), [10])\n",
-    "\n",
+    "        \n",
     "        print('Test: append general case')\n",
     "        linked_list.append('a')\n",
     "        linked_list.append('bc')\n",
     "        assert_equal(linked_list.get_all_data(), [10, 'a', 'bc'])\n",
-    "\n",
-    "        print('Success: test_append\\n')\n",
-    "\n",
+    "        \n",
+    "        print('Success: test append\\n')\n",
+    "        \n",
     "    def test_find(self):\n",
     "        print('Test: find on an empty list')\n",
     "        linked_list = LinkedList(None)\n",
     "        node = linked_list.find('a')\n",
     "        assert_equal(node, None)\n",
-    "\n",
-    "        print('Test: find a None')\n",
+    "        \n",
+    "        print('Test: find on a None')\n",
     "        head = Node(10)\n",
     "        linked_list = LinkedList(head)\n",
     "        node = linked_list.find(None)\n",
     "        assert_equal(node, None)\n",
-    "\n",
+    "        \n",
     "        print('Test: find general case with matches')\n",
     "        head = Node(10)\n",
     "        linked_list = LinkedList(head)\n",
@@ -237,25 +405,25 @@
     "        linked_list.insert_to_front('bc')\n",
     "        node = linked_list.find('a')\n",
     "        assert_equal(str(node), 'a')\n",
-    "\n",
+    "        \n",
     "        print('Test: find general case with no matches')\n",
     "        node = linked_list.find('aaa')\n",
     "        assert_equal(node, None)\n",
-    "\n",
+    "        \n",
     "        print('Success: test_find\\n')\n",
-    "\n",
+    "        \n",
     "    def test_delete(self):\n",
     "        print('Test: delete on an empty list')\n",
     "        linked_list = LinkedList(None)\n",
     "        linked_list.delete('a')\n",
     "        assert_equal(linked_list.get_all_data(), [])\n",
-    "\n",
-    "        print('Test: delete a None')\n",
+    "        \n",
+    "        print('Test: delete on None')\n",
     "        head = Node(10)\n",
     "        linked_list = LinkedList(head)\n",
     "        linked_list.delete(None)\n",
     "        assert_equal(linked_list.get_all_data(), [10])\n",
-    "\n",
+    "        \n",
     "        print('Test: delete general case with matches')\n",
     "        head = Node(10)\n",
     "        linked_list = LinkedList(head)\n",
@@ -263,68 +431,81 @@
     "        linked_list.insert_to_front('bc')\n",
     "        linked_list.delete('a')\n",
     "        assert_equal(linked_list.get_all_data(), ['bc', 10])\n",
-    "\n",
+    "        \n",
     "        print('Test: delete general case with no matches')\n",
     "        linked_list.delete('aa')\n",
     "        assert_equal(linked_list.get_all_data(), ['bc', 10])\n",
-    "\n",
-    "        print('Success: test_delete\\n')\n",
-    "\n",
+    "        \n",
+    "        print('Success: test delete\\n')\n",
+    "        \n",
     "    def test_len(self):\n",
     "        print('Test: len on an empty list')\n",
     "        linked_list = LinkedList(None)\n",
     "        assert_equal(len(linked_list), 0)\n",
-    "\n",
+    "        \n",
     "        print('Test: len general case')\n",
     "        head = Node(10)\n",
     "        linked_list = LinkedList(head)\n",
     "        linked_list.insert_to_front('a')\n",
     "        linked_list.insert_to_front('bc')\n",
     "        assert_equal(len(linked_list), 3)\n",
-    "\n",
-    "        print('Success: test_len\\n')\n",
-    "\n",
-    "\n",
+    "        \n",
+    "        print('Success: test len\\n')\n",
+    "        \n",
     "def main():\n",
+    "\n",
     "    test = TestLinkedList()\n",
     "    test.test_insert_to_front()\n",
     "    test.test_append()\n",
     "    test.test_find()\n",
     "    test.test_delete()\n",
     "    test.test_len()\n",
-    "\n",
-    "\n",
+    "    \n",
     "if __name__ == '__main__':\n",
     "    main()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Solution Notebook\n",
     "\n",
     "Review the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/linked_lists/linked_list/linked_list_solution.ipynb) for a discussion on algorithms and code solutions."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
