--- a/linked_lists/palindrome/palindrome_challenge.ipynb
+++ b/linked_lists/palindrome/palindrome_challenge.ipynb
@@ -2,21 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This notebook was prepared by [Donne Martin](http://donnemartin.com). Source and license info is on [GitHub](https://github.com/donnemartin/interactive-coding-challenges)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Challenge Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Problem: Determine if a linked list is a palindrome.\n",
     "\n",
@@ -30,7 +39,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Constraints\n",
     "\n",
@@ -48,7 +60,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Test Cases\n",
     "\n",
@@ -62,16 +77,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Algorithm\n",
     "\n",
-    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/linked_lists/palindrome/palindrome_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start."
+    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/linked_lists/palindrome/palindrome_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start.\n",
+    "\n",
+    "* Reverse the linked list\n",
+    "    * Iterate through the current linked list\n",
+    "        * Insert to front the current node into the new linked list\n",
+    "* Compare the reversed list with the original list\n",
+    "    * Only need to compare the first half\n",
+    "    \n",
+    "Complexity:\n",
+    "* Time: O(n)\n",
+    "* Space: O(n)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Code"
    ]
@@ -80,39 +111,165 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "%run ../linked_list/linked_list.py\n",
-    "%load ../linked_list/linked_list.py"
+    "# %load ../linked_list/linked_list.py\n",
+    "class Node(object):\n",
+    "\n",
+    "    def __init__(self, data, next=None):\n",
+    "        self.next = next\n",
+    "        self.data = data\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return self.data\n",
+    "\n",
+    "\n",
+    "class LinkedList(object):\n",
+    "\n",
+    "    def __init__(self, head=None):\n",
+    "        self.head = head\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        curr = self.head\n",
+    "        counter = 0\n",
+    "        while curr is not None:\n",
+    "            counter += 1\n",
+    "            curr = curr.next\n",
+    "        return counter\n",
+    "\n",
+    "    def insert_to_front(self, data):\n",
+    "        if data is None:\n",
+    "            return None\n",
+    "        node = Node(data, self.head)\n",
+    "        self.head = node\n",
+    "        return node\n",
+    "\n",
+    "    def append(self, data):\n",
+    "        if data is None:\n",
+    "            return None\n",
+    "        node = Node(data)\n",
+    "        if self.head is None:\n",
+    "            self.head = Node(data)\n",
+    "            return node\n",
+    "        curr_node = self.head\n",
+    "        while curr_node.next is not None:\n",
+    "            curr_node = curr_node.next\n",
+    "        curr_node.next = node\n",
+    "        return node\n",
+    "\n",
+    "    def find(self, data):\n",
+    "        if data is None:\n",
+    "            return None\n",
+    "        curr_node = self.head\n",
+    "        while curr_node is not None:\n",
+    "            if curr_node.data == data:\n",
+    "                return curr_node\n",
+    "            curr_node = curr_node.next\n",
+    "        return None\n",
+    "\n",
+    "    def delete(self, data):\n",
+    "        if data is None:\n",
+    "            return\n",
+    "        if self.head is None:\n",
+    "            return\n",
+    "        if self.head.data == data:\n",
+    "            self.head = None\n",
+    "            return\n",
+    "        prev_node = self.head\n",
+    "        curr_node = self.head.next\n",
+    "        while curr_node is not None:\n",
+    "            if curr_node.data == data:\n",
+    "                prev_node.next = curr_node.next\n",
+    "                return\n",
+    "            prev_node = curr_node\n",
+    "            curr_node = curr_node.next\n",
+    "\n",
+    "    def delete_alt(self, data):\n",
+    "        if data is None:\n",
+    "            return\n",
+    "        if self.head is None:\n",
+    "            return\n",
+    "        curr_node = self.head\n",
+    "        if curr_node.data == data:\n",
+    "            curr_node = curr_node.next\n",
+    "            return\n",
+    "        while curr_node.next is not None:\n",
+    "            if curr_node.next.data == data:\n",
+    "                curr_node.next = curr_node.next.next\n",
+    "                return\n",
+    "            curr_node = curr_node.next\n",
+    "\n",
+    "    def print_list(self):\n",
+    "        curr_node = self.head\n",
+    "        while curr_node is not None:\n",
+    "            print(curr_node.data)\n",
+    "            curr_node = curr_node.next\n",
+    "\n",
+    "    def get_all_data(self):\n",
+    "        data = []\n",
+    "        curr_node = self.head\n",
+    "        while curr_node is not None:\n",
+    "            data.append(curr_node.data)\n",
+    "            curr_node = curr_node.next\n",
+    "        return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "class MyLinkedList(LinkedList):\n",
     "\n",
     "    def is_palindrome(self):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        if self.head is None or self.head.next is None:\n",
+    "            return False\n",
+    "        curr = self.head\n",
+    "        reversed_list = MyLinkedList()\n",
+    "        length = 0\n",
+    "        \n",
+    "        while curr is not None:\n",
+    "            reversed_list.insert_to_front(curr.data)\n",
+    "            length += 1\n",
+    "            curr = curr.next\n",
+    "            \n",
+    "        iterations = length // 2\n",
+    "        curr = self.head\n",
+    "        curr_reversed = reversed_list.head\n",
+    "        for _ in range(iterations):\n",
+    "            if curr.data != curr_reversed.data:\n",
+    "                return False\n",
+    "            curr = curr.next\n",
+    "            curr_reversed = curr_reversed.next\n",
+    "        return True\n",
+    "        "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Unit Test"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "\n",
     "\n",
@@ -121,11 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test: Empty list\n",
+      "Test: Single element list\n",
+      "Test: two element list, not a palindrome\n",
+      "Test: General case: Palindrome with even length\n",
+      "Success: test_palindrome\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_palindrome.py\n",
     "from nose.tools import assert_equal\n",
@@ -137,16 +308,16 @@
     "        print('Test: Empty list')\n",
     "        linked_list = MyLinkedList()\n",
     "        assert_equal(linked_list.is_palindrome(), False)\n",
-    "\n",
+    "        \n",
     "        print('Test: Single element list')\n",
     "        head = Node(1)\n",
     "        linked_list = MyLinkedList(head)\n",
     "        assert_equal(linked_list.is_palindrome(), False)\n",
-    "\n",
-    "        print('Test: Two element list, not a palindrome')\n",
+    "        \n",
+    "        print('Test: two element list, not a palindrome')\n",
     "        linked_list.append(2)\n",
     "        assert_equal(linked_list.is_palindrome(), False)\n",
-    "\n",
+    "        \n",
     "        print('Test: General case: Palindrome with even length')\n",
     "        head = Node('a')\n",
     "        linked_list = MyLinkedList(head)\n",
@@ -154,19 +325,9 @@
     "        linked_list.append('b')\n",
     "        linked_list.append('a')\n",
     "        assert_equal(linked_list.is_palindrome(), True)\n",
-    "\n",
-    "        print('Test: General case: Palindrome with odd length')\n",
-    "        head = Node(1)\n",
-    "        linked_list = MyLinkedList(head)\n",
-    "        linked_list.append(2)\n",
-    "        linked_list.append(3)\n",
-    "        linked_list.append(2)\n",
-    "        linked_list.append(1)\n",
-    "        assert_equal(linked_list.is_palindrome(), True)\n",
-    "\n",
+    "        \n",
     "        print('Success: test_palindrome')\n",
-    "\n",
-    "\n",
+    "    \n",
     "def main():\n",
     "    test = TestPalindrome()\n",
     "    test.test_palindrome()\n",
@@ -178,7 +339,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Solution Notebook\n",
     "\n",
@@ -188,21 +352,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
