--- a/linked_lists/remove_duplicates/remove_duplicates_challenge.ipynb
+++ b/linked_lists/remove_duplicates/remove_duplicates_challenge.ipynb
@@ -2,21 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This notebook was prepared by [Donne Martin](http://donnemartin.com). Source and license info is on [GitHub](https://github.com/donnemartin/interactive-coding-challenges)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Challenge Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Problem: Remove duplicates from a linked list.\n",
     "\n",
@@ -30,7 +39,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Constraints\n",
     "\n",
@@ -48,7 +60,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Test Cases\n",
     "\n",
@@ -60,16 +75,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Algorithm\n",
     "\n",
-    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/linked_lists/remove_duplicates/remove_duplicates_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start."
+    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/linked_lists/remove_duplicates/remove_duplicates_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start.\n",
+    "\n",
+    "Loop through each node\n",
+    "\n",
+    "* For each node\n",
+    "    * If the node's value is in the hash map\n",
+    "        * Delete the node\n",
+    "    * Else\n",
+    "        * Add node's value to the hash map\n",
+    "        \n",
+    "Complexity:\n",
+    "* Time: O(n)\n",
+    "* Space: O(n)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Code"
    ]
@@ -78,39 +111,156 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "%run ../linked_list/linked_list.py\n",
-    "%load ../linked_list/linked_list.py"
+    "# %load ../linked_list/linked_list.py\n",
+    "class Node(object):\n",
+    "\n",
+    "    def __init__(self, data, next=None):\n",
+    "        self.next = next\n",
+    "        self.data = data\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return self.data\n",
+    "\n",
+    "\n",
+    "class LinkedList(object):\n",
+    "\n",
+    "    def __init__(self, head=None):\n",
+    "        self.head = head\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        curr = self.head\n",
+    "        counter = 0\n",
+    "        while curr is not None:\n",
+    "            counter += 1\n",
+    "            curr = curr.next\n",
+    "        return counter\n",
+    "\n",
+    "    def insert_to_front(self, data):\n",
+    "        if data is None:\n",
+    "            return None\n",
+    "        node = Node(data, self.head)\n",
+    "        self.head = node\n",
+    "        return node\n",
+    "\n",
+    "    def append(self, data):\n",
+    "        if data is None:\n",
+    "            return None\n",
+    "        node = Node(data)\n",
+    "        if self.head is None:\n",
+    "            self.head = Node(data)\n",
+    "            return node\n",
+    "        curr_node = self.head\n",
+    "        while curr_node.next is not None:\n",
+    "            curr_node = curr_node.next\n",
+    "        curr_node.next = node\n",
+    "        return node\n",
+    "\n",
+    "    def find(self, data):\n",
+    "        if data is None:\n",
+    "            return None\n",
+    "        curr_node = self.head\n",
+    "        while curr_node is not None:\n",
+    "            if curr_node.data == data:\n",
+    "                return curr_node\n",
+    "            curr_node = curr_node.next\n",
+    "        return None\n",
+    "\n",
+    "    def delete(self, data):\n",
+    "        if data is None:\n",
+    "            return\n",
+    "        if self.head is None:\n",
+    "            return\n",
+    "        if self.head.data == data:\n",
+    "            self.head = None\n",
+    "            return\n",
+    "        prev_node = self.head\n",
+    "        curr_node = self.head.next\n",
+    "        while curr_node is not None:\n",
+    "            if curr_node.data == data:\n",
+    "                prev_node.next = curr_node.next\n",
+    "                return\n",
+    "            prev_node = curr_node\n",
+    "            curr_node = curr_node.next\n",
+    "\n",
+    "    def delete_alt(self, data):\n",
+    "        if data is None:\n",
+    "            return\n",
+    "        if self.head is None:\n",
+    "            return\n",
+    "        curr_node = self.head\n",
+    "        if curr_node.data == data:\n",
+    "            curr_node = curr_node.next\n",
+    "            return\n",
+    "        while curr_node.next is not None:\n",
+    "            if curr_node.next.data == data:\n",
+    "                curr_node.next = curr_node.next.next\n",
+    "                return\n",
+    "            curr_node = curr_node.next\n",
+    "\n",
+    "    def print_list(self):\n",
+    "        curr_node = self.head\n",
+    "        while curr_node is not None:\n",
+    "            print(curr_node.data)\n",
+    "            curr_node = curr_node.next\n",
+    "\n",
+    "    def get_all_data(self):\n",
+    "        data = []\n",
+    "        curr_node = self.head\n",
+    "        while curr_node is not None:\n",
+    "            data.append(curr_node.data)\n",
+    "            curr_node = curr_node.next\n",
+    "        return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "class MyLinkedList(LinkedList):\n",
     "\n",
     "    def remove_dupes(self):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        if self.head is None:\n",
+    "            return\n",
+    "        node = self.head\n",
+    "        seen_data = set()\n",
+    "        while node is not None:\n",
+    "            if node.data not in seen_data:\n",
+    "                seen_data.add(node.data)\n",
+    "                prev = node\n",
+    "                node = node.next\n",
+    "            else:\n",
+    "                prev.next = node.next\n",
+    "                node = node.next"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Unit Test"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "\n",
     "\n",
@@ -119,11 +269,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test: Empty list\n",
+      "Test: One element list\n",
+      "Test: General case, duplicates\n",
+      "Test: General case, no duplicates\n",
+      "Success: test_remove_dupes\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_remove_duplicates.py\n",
     "from nose.tools import assert_equal\n",
@@ -135,12 +300,12 @@
     "        print('Test: Empty list')\n",
     "        linked_list.remove_dupes()\n",
     "        assert_equal(linked_list.get_all_data(), [])\n",
-    "\n",
+    "        \n",
     "        print('Test: One element list')\n",
     "        linked_list.insert_to_front(2)\n",
     "        linked_list.remove_dupes()\n",
     "        assert_equal(linked_list.get_all_data(), [2])\n",
-    "\n",
+    "        \n",
     "        print('Test: General case, duplicates')\n",
     "        linked_list.insert_to_front(1)\n",
     "        linked_list.insert_to_front(1)\n",
@@ -151,19 +316,17 @@
     "        linked_list.insert_to_front(1)\n",
     "        linked_list.remove_dupes()\n",
     "        assert_equal(linked_list.get_all_data(), [1, 3, 2])\n",
-    "\n",
+    "    \n",
     "        print('Test: General case, no duplicates')\n",
     "        linked_list.remove_dupes()\n",
     "        assert_equal(linked_list.get_all_data(), [1, 3, 2])\n",
-    "\n",
+    "        \n",
     "        print('Success: test_remove_dupes\\n')\n",
-    "\n",
-    "\n",
+    "        \n",
     "def main():\n",
     "    test = TestRemoveDupes()\n",
     "    linked_list = MyLinkedList(None)\n",
     "    test.test_remove_dupes(linked_list)\n",
-    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
@@ -171,7 +334,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Solution Notebook\n",
     "\n",
@@ -181,21 +347,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
