--- a/sorting_searching/merge_sort/merge_sort_challenge.ipynb
+++ b/sorting_searching/merge_sort/merge_sort_challenge.ipynb
@@ -2,21 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This notebook was prepared by [Donne Martin](http://donnemartin.com). Source and license info is on [GitHub](https://github.com/donnemartin/interactive-coding-challenges)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Challenge Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Problem: Implement merge sort.\n",
     "\n",
@@ -30,7 +39,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Constraints\n",
     "\n",
@@ -46,7 +58,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Test Cases\n",
     "\n",
@@ -59,38 +74,97 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Algorithm\n",
     "\n",
-    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/sorting_searching/merge_sort/merge_sort_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start."
+    "Refer to the [Solution Notebook](http://nbviewer.ipython.org/github/donnemartin/interactive-coding-challenges/blob/master/sorting_searching/merge_sort/merge_sort_solution.ipynb).  If you are stuck and need a hint, the solution notebook's algorithm discussion might be a good place to start.\n",
+    "\n",
+    "* Recursively split array into left and right halves\n",
+    "* Merge split arrays\n",
+    "    * Using two pointers, one for each half starting at index 0\n",
+    "        * Add the smaller element to the result array\n",
+    "        * Increment pointer where smaller element exists\n",
+    "    * Copy remaining elements to the result array\n",
+    "    * Return result array\n",
+    "    \n",
+    "Complexity:\n",
+    "\n",
+    "* Time: O(n log(n))\n",
+    "* Space: O(n)\n",
+    "   "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
+    "from __future__ import division\n",
+    "\n",
     "class MergeSort(object):\n",
     "\n",
     "    def sort(self, data):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        if data is None:\n",
+    "            raise TypeError('data cannot be None')\n",
+    "        return self._sort(data)\n",
+    "    \n",
+    "    def _sort(self, data):\n",
+    "        if len(data) < 2:\n",
+    "            return data\n",
+    "        mid = len(data) // 2\n",
+    "        left = data[:mid]\n",
+    "        right = data[mid:]\n",
+    "        left = self._sort(left)\n",
+    "        right = self._sort(right)\n",
+    "        return self._merge(left, right)\n",
+    "    \n",
+    "    def _merge(self, left, right):\n",
+    "        l = 0\n",
+    "        r = 0\n",
+    "        result = []\n",
+    "        \n",
+    "        while l < len(left) and r < len(right):\n",
+    "            if left[l] < right[r]:\n",
+    "                result.append(left[l])\n",
+    "                l += 1\n",
+    "            else:\n",
+    "                result.append(right[r])\n",
+    "                r += 1\n",
+    "                \n",
+    "        while l < len(left):\n",
+    "            result.append(left[l])\n",
+    "            l += 1\n",
+    "        while r < len(right):\n",
+    "            result.append(right[r])\n",
+    "            r += 1\n",
+    "        return result"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Unit Test\n",
     "\n",
@@ -101,11 +175,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None input\n",
+      "Empty input\n",
+      "One element\n",
+      "Two or more elements\n",
+      "Success: test_merge_sort\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_merge_sort.py\n",
     "from nose.tools import assert_equal, assert_raises\n",
@@ -115,27 +203,25 @@
     "\n",
     "    def test_merge_sort(self):\n",
     "        merge_sort = MergeSort()\n",
-    "\n",
+    "        \n",
     "        print('None input')\n",
     "        assert_raises(TypeError, merge_sort.sort, None)\n",
-    "\n",
+    "        \n",
     "        print('Empty input')\n",
     "        assert_equal(merge_sort.sort([]), [])\n",
-    "\n",
+    "        \n",
     "        print('One element')\n",
     "        assert_equal(merge_sort.sort([5]), [5])\n",
-    "\n",
+    "        \n",
     "        print('Two or more elements')\n",
     "        data = [5, 1, 7, 2, 6, -3, 5, 7, -1]\n",
     "        assert_equal(merge_sort.sort(data), sorted(data))\n",
-    "\n",
+    "        \n",
     "        print('Success: test_merge_sort')\n",
-    "\n",
     "\n",
     "def main():\n",
     "    test = TestMergeSort()\n",
     "    test.test_merge_sort()\n",
-    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
@@ -143,7 +229,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Solution Notebook\n",
     "\n",
@@ -153,21 +242,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
