--- a/sorting_searching/quick_sort/quick_sort_challenge.ipynb
+++ b/sorting_searching/quick_sort/quick_sort_challenge.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -103,11 +103,35 @@
    },
    "outputs": [],
    "source": [
+    "from __future__ import division\n",
+    "\n",
     "class QuickSort(object):\n",
     "\n",
     "    def sort(self, data):\n",
-    "        # TODO: Implement me\n",
-    "        pass"
+    "        if data is None:\n",
+    "            raise TypeError('data cannot be None')\n",
+    "        return self._sort(data)\n",
+    "    \n",
+    "    def _sort(self, data):\n",
+    "        if len(data) < 2:\n",
+    "            return data\n",
+    "        equal = []\n",
+    "        left = []\n",
+    "        right = []\n",
+    "        pivot_index = len(data) // 2\n",
+    "        pivot_value = data[pivot_index]\n",
+    "        \n",
+    "        for item in data:\n",
+    "            if item == pivot_value:\n",
+    "                equal.append(item)\n",
+    "            elif item < pivot_value:\n",
+    "                left.append(item)\n",
+    "            else:\n",
+    "                right.append(item)\n",
+    "                \n",
+    "        left_ = self._sort(left)\n",
+    "        right_ = self._sort(right)\n",
+    "        return left_ + equal + right_"
    ]
   },
   {
@@ -126,13 +150,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None input\n",
+      "Empty input\n",
+      "One element\n",
+      "Two or more element\n",
+      "Success: test_quick_sort\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# %load test_quick_sort.py\n",
     "from nose.tools import assert_equal, assert_raises\n",
@@ -142,27 +179,25 @@
     "\n",
     "    def test_quick_sort(self):\n",
     "        quick_sort = QuickSort()\n",
-    "\n",
+    "        \n",
     "        print('None input')\n",
     "        assert_raises(TypeError, quick_sort.sort, None)\n",
-    "\n",
+    "        \n",
     "        print('Empty input')\n",
     "        assert_equal(quick_sort.sort([]), [])\n",
-    "\n",
+    "        \n",
     "        print('One element')\n",
     "        assert_equal(quick_sort.sort([5]), [5])\n",
-    "\n",
-    "        print('Two or more elements')\n",
+    "        \n",
+    "        print('Two or more element')\n",
     "        data = [5, 1, 7, 2, 6, -3, 5, 7, -1]\n",
     "        assert_equal(quick_sort.sort(data), sorted(data))\n",
-    "\n",
+    "        \n",
     "        print('Success: test_quick_sort\\n')\n",
-    "\n",
     "\n",
     "def main():\n",
     "    test = TestQuickSort()\n",
     "    test.test_quick_sort()\n",
-    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
