Add javascript for string reverse and rotation.

--- a/arrays_strings/reverse_string/reverse_string_solution.ipynb
+++ b/arrays_strings/reverse_string/reverse_string_solution.ipynb
@@ -286,19 +286,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-5326c5b4b64b>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-1-5326c5b4b64b>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-5326c5b4b64b>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    void Reverse(char* str) {\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-5326c5b4b64b>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    void Reverse(char* str) {\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -340,6 +341,67 @@
     "    printf(\"%s \\n\", test1);\n",
     "    return 0;\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# %load reverseString.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class ReverseString {\n",
+    "\n",
+    "  reverse(str) {\n",
+    "    if (str === undefined) {\n",
+    "      return str;\n",
+    "    }\n",
+    "    const chars = str.split('');\n",
+    "    const size = chars.length;\n",
+    "    if (size < 2) {\n",
+    "      return chars.join('');\n",
+    "    }\n",
+    "    for (let i = 0; i < Math.floor(size / 2); i++) {\n",
+    "      const tmp = chars[i];\n",
+    "      chars[i] = chars[size - 1 - i];\n",
+    "      chars[size - 1 - i] = tmp;\n",
+    "    }\n",
+    "    return chars.join('');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestReverseString {\n",
+    "\n",
+    "  testReverse(func) {\n",
+    "    assert.equal(func(), undefined);\n",
+    "    assert.equal(func(''), '');\n",
+    "    assert.equal(func('foobar'), 'raboof');\n",
+    "    console.log('Success: testReverse');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestReverseString();\n",
+    "  const reverseString = new ReverseString();\n",
+    "  test.testReverse(reverseString.reverse);\n",
+    "}\n",
+    "main();\n"
    ]
   },
   {
