Add javascript string diff solution.

--- a/arrays_strings/str_diff/str_diff_solution.ipynb
+++ b/arrays_strings/str_diff/str_diff_solution.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -201,11 +201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -219,6 +220,84 @@
    "source": [
     "%run -i test_str_diff.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# %load stringDiff.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class Solution {\n",
+    "\n",
+    "  findDiff(str1, str2) {\n",
+    "    if (typeof str1 !== 'string' || typeof str2 !== 'string') {\n",
+    "      throw TypeError('str1 or str2 is not of type string.');\n",
+    "    }\n",
+    "    const seen = {};\n",
+    "    str1.split('').forEach((char) => {\n",
+    "      if (seen[char]) {\n",
+    "        seen[char] += 1;\n",
+    "      } else {\n",
+    "        seen[char] = 1;\n",
+    "      }\n",
+    "    });\n",
+    "    const chars = str2.split('');\n",
+    "    const len = chars.length;\n",
+    "    for (let i = 0; i < len; i++) {\n",
+    "      if (seen[chars[i]]) {\n",
+    "        seen[chars[i]] -= 1;\n",
+    "      } else {\n",
+    "        return chars[i];\n",
+    "      }\n",
+    "      if (seen[chars[i]] < 0) {\n",
+    "        return chars[i]\n",
+    "      }\n",
+    "    }\n",
+    "    return null;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestFindDiff {\n",
+    "\n",
+    "  testFindDiff() {\n",
+    "    const solution = new Solution();\n",
+    "    assert.throws(() => solution.findDiff(null, 'foo'), TypeError);\n",
+    "    assert.equal(solution.findDiff('abcd', 'abcde'), 'e');\n",
+    "    assert.equal(solution.findDiff('aaabbcdd', 'abdbacade'), 'e');\n",
+    "    console.log('Success: testFindDiff');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestFindDiff();\n",
+    "  test.testFindDiff();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
